# python_rust_sandbox

./: .gitignore  Cargo.toml  pyproject.toml
python_rust_sandbox/: __init__.py  array_wrap.py
src/: lib.rs  sandbox.rs
